// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavItem should render a contained navitem 1`] = `
<div>
  <div
    class="cds-navItemContainer cds-navItemContainer--contained"
  >
    <div
      class="cds-navItem"
    >
      <div
        class="cds-navItem-icon"
      >
        <svg
          class="cds-navItemSvg"
          fill="currentColor"
          height="20"
          viewBox="0 0 256 256"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Website home
          </title>
          <path
            d="M240,208H224V115.55a16,16,0,0,0-5.17-11.78l-80-75.48a1.14,1.14,0,0,1-.11-.11,16,16,0,0,0-21.53,0l-.11.11L37.17,103.77A16,16,0,0,0,32,115.55V208H16a8,8,0,0,0,0,16H240a8,8,0,0,0,0-16ZM48,115.55l.11-.1L128,40l79.9,75.43.11.1V208H160V160a16,16,0,0,0-16-16H112a16,16,0,0,0-16,16v48H48ZM144,208H112V160h32Z"
          />
        </svg>
      </div>
      <div
        class="cds-navItemText"
      >
         
        <a
          aria-disabled="false"
          href="#"
          target="_self"
        >
          Hello World
        </a>
      </div>
      <button
        aria-label="Show sub navigation"
        class="cds-navItemExpander"
      >
        <svg
          class="cds-navItemSvg"
          fill="currentColor"
          height="20"
          viewBox="0 0 256 256"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="cds-subNavWrapper"
    >
      <div
        class="cds-subNavContainer"
      >
        <div
          class="cds-navItemContainer"
        >
          <div
            class="cds-navItem"
          >
            <div
              class="cds-navItemText"
            >
               
              <a
                aria-disabled="false"
                href="#"
                target="_self"
              >
                Sub Nav Item 1
              </a>
            </div>
          </div>
        </div>
        <div
          class="cds-navItemContainer"
        >
          <div
            class="cds-navItem"
          >
            <div
              class="cds-navItemText"
            >
               
              <a
                aria-disabled="false"
                href="#"
                target="_self"
              >
                Sub Nav Item 2
              </a>
            </div>
          </div>
        </div>
        <div
          class="cds-navItemContainer"
        >
          <div
            class="cds-navItem"
          >
            <div
              class="cds-navItemText"
            >
               
              <a
                aria-disabled="false"
                href="#"
                target="_self"
              >
                Sub Nav Item 3
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NavItem should render a nav item with subnav closed by default 1`] = `
<div>
  <div
    class="cds-navItemContainer"
  >
    <div
      class="cds-navItem"
    >
      <div
        class="cds-navItem-icon"
      >
        <svg
          class="cds-navItemSvg"
          fill="currentColor"
          height="20"
          viewBox="0 0 256 256"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Website home
          </title>
          <path
            d="M240,208H224V115.55a16,16,0,0,0-5.17-11.78l-80-75.48a1.14,1.14,0,0,1-.11-.11,16,16,0,0,0-21.53,0l-.11.11L37.17,103.77A16,16,0,0,0,32,115.55V208H16a8,8,0,0,0,0,16H240a8,8,0,0,0,0-16ZM48,115.55l.11-.1L128,40l79.9,75.43.11.1V208H160V160a16,16,0,0,0-16-16H112a16,16,0,0,0-16,16v48H48ZM144,208H112V160h32Z"
          />
        </svg>
      </div>
      <div
        class="cds-navItemText"
      >
         
        <a
          aria-disabled="false"
          href="#"
          target="_self"
        >
          Hello World
        </a>
      </div>
      <button
        aria-label="Show sub navigation"
        class="cds-navItemExpander"
      >
        <svg
          class="cds-navItemSvg"
          fill="currentColor"
          height="20"
          viewBox="0 0 256 256"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="cds-subNavWrapper"
    >
      <div
        class="cds-subNavContainer"
      >
        <div
          class="cds-navItemContainer"
        >
          <div
            class="cds-navItem"
          >
            <div
              class="cds-navItemText"
            >
               
              <a
                aria-disabled="false"
                href="#"
                target="_self"
              >
                Sub Nav Item 1
              </a>
            </div>
          </div>
        </div>
        <div
          class="cds-navItemContainer"
        >
          <div
            class="cds-navItem"
          >
            <div
              class="cds-navItemText"
            >
               
              <a
                aria-disabled="false"
                href="#"
                target="_self"
              >
                Sub Nav Item 2
              </a>
            </div>
          </div>
        </div>
        <div
          class="cds-navItemContainer"
        >
          <div
            class="cds-navItem"
          >
            <div
              class="cds-navItemText"
            >
               
              <a
                aria-disabled="false"
                href="#"
                target="_self"
              >
                Sub Nav Item 3
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NavItem should render a nav item with subnav open 1`] = `
<div>
  <div
    class="cds-navItemContainer"
  >
    <div
      class="cds-navItem"
    >
      <div
        class="cds-navItem-icon"
      >
        <svg
          class="cds-navItemSvg"
          fill="currentColor"
          height="20"
          viewBox="0 0 256 256"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Website home
          </title>
          <path
            d="M240,208H224V115.55a16,16,0,0,0-5.17-11.78l-80-75.48a1.14,1.14,0,0,1-.11-.11,16,16,0,0,0-21.53,0l-.11.11L37.17,103.77A16,16,0,0,0,32,115.55V208H16a8,8,0,0,0,0,16H240a8,8,0,0,0,0-16ZM48,115.55l.11-.1L128,40l79.9,75.43.11.1V208H160V160a16,16,0,0,0-16-16H112a16,16,0,0,0-16,16v48H48ZM144,208H112V160h32Z"
          />
        </svg>
      </div>
      <div
        class="cds-navItemText"
      >
         
        <a
          aria-disabled="false"
          href="#"
          target="_self"
        >
          Hello World
        </a>
      </div>
      <button
        aria-label="Hide sub navigation"
        class="cds-navItemExpander cds-navItemExpander--opened"
      >
        <svg
          class="cds-navItemSvg"
          fill="currentColor"
          height="20"
          viewBox="0 0 256 256"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="cds-subNavWrapper"
      style="max-height: 0px;"
    >
      <div
        class="cds-subNavContainer"
      >
        <div
          class="cds-navItemContainer"
        >
          <div
            class="cds-navItem"
          >
            <div
              class="cds-navItemText"
            >
               
              <a
                aria-disabled="false"
                href="#"
                target="_self"
              >
                Sub Nav Item 1
              </a>
            </div>
          </div>
        </div>
        <div
          class="cds-navItemContainer"
        >
          <div
            class="cds-navItem"
          >
            <div
              class="cds-navItemText"
            >
               
              <a
                aria-disabled="false"
                href="#"
                target="_self"
              >
                Sub Nav Item 2
              </a>
            </div>
          </div>
        </div>
        <div
          class="cds-navItemContainer"
        >
          <div
            class="cds-navItem"
          >
            <div
              class="cds-navItemText"
            >
               
              <a
                aria-disabled="false"
                href="#"
                target="_self"
              >
                Sub Nav Item 3
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NavItem should render a single nav item with no subnav button or items 1`] = `
<div>
  <div
    class="cds-navItemContainer"
  >
    <div
      class="cds-navItem"
    >
      <div
        class="cds-navItem-icon"
      >
        <svg
          class="cds-navItemSvg"
          fill="currentColor"
          height="20"
          viewBox="0 0 256 256"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Website home
          </title>
          <path
            d="M240,208H224V115.55a16,16,0,0,0-5.17-11.78l-80-75.48a1.14,1.14,0,0,1-.11-.11,16,16,0,0,0-21.53,0l-.11.11L37.17,103.77A16,16,0,0,0,32,115.55V208H16a8,8,0,0,0,0,16H240a8,8,0,0,0,0-16ZM48,115.55l.11-.1L128,40l79.9,75.43.11.1V208H160V160a16,16,0,0,0-16-16H112a16,16,0,0,0-16,16v48H48ZM144,208H112V160h32Z"
          />
        </svg>
      </div>
      <div
        class="cds-navItemText"
      >
         
        <a
          aria-disabled="false"
          href="#"
          target="_self"
        >
          Hello World
        </a>
      </div>
    </div>
  </div>
</div>
`;
